# NEWorld.Base

./: .gitignore  CMakeLists.txt  README.md
CMake/: Config.cmake
Source/Common/: Logger.cpp  Memory.h  ScopeGuard.h
Source/Conc/: BlockingAsContext.h  Executor.h  Lock.h  ManualDrainExecutor.h  Promise.h  SpinLock.h  SpinWait.cpp  SpinWait.h
Source/Conc/Executors/: BagQueue.h  BlockingAsContext.cpp  Executor.cpp  Executor.hpp  FifoQueue.h  ManualDrainExecutor.cpp  QueueDrain.h  ScalingExecutor.h  ScalingThreads.cpp  SingleThread.cpp
Source/Coro/: Async.h  Coro.h  CoroDetail.h  FlexAsync.h  ValueAsync.h
Source/IO/: Block.h  Status.h  Stream.h  Types.h
Source/Internal/: Semaphore.h  system.h
Source/Math/: Vector3.h  Vector4.h
Source/System/: MessageBus.h  PmrBase.h  Semaphore.h  Timing.cpp
Source/Temp/: Allocation.cpp  Block.cpp  Deque.h  Ordered.h  String.h  Temp.h  TempQueue.h  Unordered.h  Vector.h
Source/Tss/: Tss.cpp  Tss.h
SourceLinux5/IO/: Stream.cpp  Uring.cpp  Uring.h
Test/: main.cpp
